--- a/style.css
+++ b/style.css
@@ -69,3 +69,12 @@
     height: 400px;
     width: 400px;
     }
+
+.bar {
+    fill: steelblue;
+    }
+
+.flex-container {
+        display: flex;
+        flex-wrap: nowrap;
+      }
