Put slider in a sticky header

--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
     position: relative;
     height: 30px;
     background-color: #eeeef5;
-  }
+}
 
 .slider {
     position: absolute;
-    border: 1px solid #AAB;
-    background: #BCE;
+    border: 1px solid #aab;
+    background: #bce;
     height: 100%;
     width: 58px;
     top: 0px;
@@ -23,8 +23,8 @@
     position: absolute;
     height: 9px;
     width: 9px;
-    border: 1px solid #AAB;
-    background: #9AC;
+    border: 1px solid #aab;
+    background: #9ac;
 
     /* Support for bootstrap */
     box-sizing: border-box;
@@ -42,20 +42,22 @@
     left: -4px;
 }
 
-.slider .EE, .slider .WW {
+.slider .EE,
+.slider .WW {
     top: 50%;
     margin-top: -4px;
 }
 
-.play-container .button{
-    fill-opacity: 0.0;
-    stroke: #AAB;
+.play-container .button {
+    fill-opacity: 0;
+    stroke: #aab;
     stroke-width: 1.6;
 }
 
-.play-container .play, .play-container .stop {
-    fill: #BCE;
-    stroke: #AAB;
+.play-container .play,
+.play-container .stop {
+    fill: #bce;
+    stroke: #aab;
     stroke-width: 1;
 }
 
@@ -68,13 +70,21 @@
     margin: 20px auto 0;
     height: 400px;
     width: 400px;
-    }
+}
 
 .bar {
     fill: steelblue;
-    }
+}
 
 .flex-container {
-        display: flex;
-        flex-wrap: nowrap;
-      }
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+#sticky-header {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    margin-bottom: 5px;
+    background-color: #f2f2f9;
+}
