--- a/style.css
+++ b/style.css
@@ -88,3 +88,103 @@
     margin-bottom: 5px;
     background-color: #f2f2f9;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+.grid-item {
+    border: 1px solid black;
+    padding: 10px;
+}
+
+#chart {
+    max-width: 100%;
+    overflow: auto;
+}
+
+text {
+    pointer-events: none;
+}
+
+.grandparent text {
+    font-weight: bold;
+    font-family: "sans-serif";
+    font-size: 20px;
+}
+
+rect {
+    stroke: #fff;
+    stroke-width: 1px;
+}
+
+rect.parent,
+.grandparent rect {
+    stroke-width: 2px;
+}
+
+.grandparent:hover rect {
+    fill: darkgrey;
+}
+
+.children rect.parent,
+.grandparent rect {
+    cursor: pointer;
+}
+
+.children rect.child {
+    opacity: 0;
+}
+
+.children:hover rect.child {
+    opacity: 1;
+    stroke-width: 1px;
+}
+
+.children:hover rect.parent {
+    opacity: 0;
+}
+
+.legend {
+    margin-bottom: 8px !important;
+}
+
+.legend rect {
+    stroke-width: 0px;
+}
+
+.legend text {
+    text-anchor: middle;
+    pointer-events: auto;
+    font-size: 15px;
+    font-family: "sans-serif";
+    fill: black;
+}
+
+.form-group {
+    text-align: left;
+}
+
+.textdiv {
+    font-family: "sans-serif";
+    font-size: 14px;
+    padding: 6px;
+    cursor: pointer;
+    overflow: none;
+}
+
+.textdiv .title {
+    font-size: 102%;
+    font-weight: bold;
+    margin-top: 4px;
+    font-size: 16px;
+}
+
+.textdiv p {
+    line-height: 13px;
+    margin: 0 0 4px;
+    padding: 0px;
+    font-size: 15px;
+}
