--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body,
 .row-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: stretch;
     width: 1900px;
 }
