--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body,
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: stretch;
+    align-items: flex-start;
     /* width: 1900px; */
     margin-top: 100px;
 }
@@ -258,4 +258,11 @@ rect.parent,
 #current-races-count {
     font-size: 20px;
     font-weight: bold;
+}
+
+.time_diffs-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
