--- a/style.css
+++ b/style.css
@@ -158,7 +158,8 @@ body,
     justify-content: center;
     align-items: flex-start;
     /* width: 1900px; */
-    margin-top: 100px;
+    margin-top: 90px;
+    height: 500px;
 }
 
 .grid-item {
