--- a/style.css
+++ b/style.css
@@ -128,9 +128,10 @@ body,
 #sticky-header {
     width: 100vw;
     background-color: #cfcfc4;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky;
     position: sticky;
     margin-bottom: 5px;
     top: 0;
@@ -139,12 +140,14 @@ body,
 
 #header-container {
     width: 1000px;
-    background-color: #cfcfc4;
+    /* background-color: #cfcfc4; */
 
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
+
+    font-family: 'Arial', sans-serif; /* Change font family */
 }
 
 .grid-container {
